refactor: move data to js file instead and split command into its own file and use css for prompt prefix instead

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<body>
 		<div id="terminal">
 			<div id="output"></div>
-			<input id="prompt" type="text" autofocus />
+			<label id="prompt">
+				<span></span>
+				<input type="text" />
+			</label>
 		</div>
-		<script src="./script.js"></script>
+		<script src="./script.js" type="module"></script>
 	</body>
 </html>
